Created attachment 109586 [details] test docx file Steps to reproduce: 1. Open the attached .docx file. Observe that the line spacing is 120% proportional. 2. Set line spacing to "Single". 3. Save and reopen. --> Line spacing is still 120% proportional. (It should be "Single"). OS: Win 7 X64 Version: 4.3.4.1 Build ID: bc356b2f991740509f321d70e4512a6a54c5f243 and Version: 4.4.0.0.alpha2 Build ID: 24f0a5815f581dd9a7f09d30213a379edee6e9ac
Reproduced. Win 7 64-bit Version: 4.4.0.0.alpha2+ Build ID: b021b5983c62e266b82d9f0c5c6d8d8900553827 TinderBox: Win-x86@39, Branch:master, Time: 2014-11-12_01:10:08
Created attachment 112478 [details] another test file but not reproducible from 4.4.0 I had a similar problem, example ODT is attached. Saving as DOCX turned Single spacing in Text Body to 120% spacing. But, I cannot reproduce it anymore with LO 4.4.0 so I won't open a new bug. I still can reproduce original bug, so my example here is just for reference. Seems like the last change with LO was for 4.2.0, so I change to that version. In my example, bug originated there. In the original example, there was change from saving Single spacing from "at least" to "120% spacing".
Kevin: I can not reproduce this bug anymore. Tested using Linux Mint x64 with Version: 5.0.0.0.alpha1+ Build ID: f3070563c3071e05e9c448e261fec1e397bffb48 Locale: nl-BE (nl_BE.UTF-8) Following the steps to reproduce -> reopening the file -> line spacing still single. Kind regards, Joren
Still repro. Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ Build ID: 6664859e1e8b3f8b7db8c931b8d0335510c20ce0 TinderBox: Win-x86@39, Branch:master, Time: 2015-05-16_03:17:27 Locale: fi-FI (fi_FI)
Created attachment 121585 [details] Example file Not sure if it is the same bug, but when I open the attached file, modify the style 'niet inspringen en blanko regel' by changing line spacing from 'proportional' to 'single', save the document and reopen it, the line spacing is back to 'proportional'. I am using writer version 4.4.6.3.
(In reply to teun from comment #5) > Created attachment 121585 [details] > Example file > > Not sure if it is the same bug, but when I open the attached file, modify > the style 'niet inspringen en blanko regel' by changing line spacing from > 'proportional' to 'single', save the document and reopen it, the line > spacing is back to 'proportional'. > > I am using writer version 4.4.6.3. As an added note, just upgraded to latest version 4.4.7.2 and still present
Bug still reproduciable Version: 5.2.1.1 (x64) Build ID: 2d75cf29e6d05e44c404f0547047f1da6563d380 CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Locale: zh-CN (zh_CN); Calc: group
Bug reproducible with: Version: 5.4.0.0.alpha0+ Build ID: 0ad4b2570f06aa014f8446757931afa1f2305458 CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; VCL: gtk3; Locale: zh-CN (zh_CN.UTF-8); Calc: group Ubuntu 16.04 LTS x64. Set platform to ALL.
Bibisecting using the "bibisect-releases" repo, I find that the behaviour changed start from libreoffice-4.2.0.0.beta1. In versions before libreoffice-4.0.6.2, when set the paragraph spacing to Single, save and reopen, it shows "At least of 6pt". Start from libreoffice-4.2.0.0.beta1, it always shows "120%". This means that it is broken somewhere within https://wiki.documentfoundation.org/Releases/4.2.0/Beta1#List_of_fixed_bugs. Added keyword "bibisected" A rough review of the changes in 4.2.0.beta1 shows that the most suspicious commit is: author Adam Co <rattles2013@gmail.com> 2013-07-10 13:43:51 (GMT) committer Miklos Vajna <vmiklos@suse.cz> 2013-07-11 08:10:09 (GMT) commit 5bb9b70a66d7818844abfaa297893c095e03d24c (patch) tree 9f14991fc8fc93d00fc39a95b292ba636e744fd6 parent dd3bb0aa49bbf45138d2ea594fb593729ac3b2b0 (diff) fdo#66773: fix for line spacing default Conflicts: sw/qa/extras/ooxmlexport/ooxmlexport.cxx Change-Id: I7dafa709fd7dcd3df445277505468386c3f1cef2 Reviewed-on: https://gerrit.libreoffice.org/4810 Added keyword "bisected" and adding Adam Co in the cc list.
My bibisect results with repo bibisect-42max are quite different, and point to the following range (saving the file crashes LO with the commits in between): https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=09d381adbfba893331a07918c9ec9b3c58939dfb..b8a4abdda4e6a95535992c26a906226ede7f050a The most likely candidate seems to be: https://cgit.freedesktop.org/libreoffice/core/commit/?id=b00c73f9338a1bc0d4698f14383c4a5f9dbd78b6 author PriyankaGaikwad <priyanka.gaikwad@synerzip.com> 2013-11-15 09:57:54 (GMT) committer Miklos Vajna <vmiklos@collabora.co.uk> 2013-11-15 16:47:25 (GMT) Fixed for spacing between lines having lineRule "auto" is getting preserved
proposed fix https://gerrit.libreoffice.org/56749
(In reply to Justin L from comment #11) > proposed fix https://gerrit.libreoffice.org/56749 It stays Single with this patch applied.
Justin Luth committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=59fe3d7d231e4acb0635ac899a0ab2dee6c59289 tdf#86371 sw export: SvxInterLineSpaceRule::Off == single spacing It will be available in 6.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Justin Luth committed a patch related to this issue. It has been pushed to "libreoffice-6-1": http://cgit.freedesktop.org/libreoffice/core/commit/?id=33aa5fb4281ed91a0d1a2a83e759ac4e6157646b&h=libreoffice-6-1 tdf#86371 sw export: SvxInterLineSpaceRule::Off == single spacing It will be available in 6.1.0.2. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.