tdf#86371 sw export: SvxInterLineSpaceRule::Off == single spacing

This affects doc/docx/rtf exporting.

Ultimately, this was due to the way the UI works. When you
select Single, it just turns spacing off, but doesn't reset
the proportional value. If instead of choosing single, you
change the proportional percent to 100, then you wouldn't
see this problem. I can see why this could be useful in the
UI (allowing them to remember the previous proportional
value) although it doesn't use it right now...

Because it is all based on sw internals, it would be
very difficult to create a unit test - not worth the effort.

Change-Id: Id17a42878f73266e19219bcd88e2decdaf3b72f2